fixed spacing of header

--- a/site.css
+++ b/site.css
@@ -15,7 +15,10 @@ h1 {
     font-size: 700%;
     text-align: center;
     padding-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
+
 
 
 .i {
